styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@font-face {
  font-family: "burtons";
  src: url("../public/Burtons.otf");
}

@font-face {
  font-family: "poppins-bold";
  src: url("../public/Poppins-Bold.ttf");
}

@font-face {
  font-family: "poppins";
  src: url("../public/Poppins-Regular.ttf");
}

@font-face {
  font-family: "sourcecode";
  src: url("../public/SourceCodePro-Regular.ttf");
}

@font-face {
  font-family: "drukwideweb";
  src: url("../public/Druk-Wide-Bold.ttf");
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

/* Projects Component Styling */
.projects {
  margin-top: 1rem;
}

.projectContainer {
  margin-top: 1rem;
  justify-content: space-between;
  grid-template-columns: repeat(1, 1fr);
}

.singleProject {
  display: grid;
  gap: 0.5rem;
  padding: 1.5rem 1rem;
  border-radius: 10px;
  height: 100%;
  background: #f8f5f2;
}

.singleProject:hover {
  transform: translateY(-7px);
  border-bottom: 4px solid #0062fd;
}

.externalLinks {
  width: 100%;
  justify-content: space-between;
}

.youtubeIcon,
.githubIcon {
  color: #0062fd;
}

.miniContainerDiv {
  width: auto;
  height: 350px;
  border-radius: 5px;
  overflow: hidden;
  cursor: pointer;
  background-color: #f8f5f2;
  position: relative;
  display: flex; /* Use flexbox to center the content */
  justify-content: center; /* Horizontally center the content */
}

/* Blue overlay on hover */
.miniContainerDiv::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #0062fd;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
}

.miniContainerDiv:hover::before {
  opacity: 1;
}

.miniContainerDiv:hover span {
  color: #fff;
}

/* Hide the image by setting opacity to 0 */
.miniContainerDiv .demoImg img {
  opacity: 1;
  transition: opacity 0.3s ease-in-out;
}

/* Show the blue overlay on hover and hide the image */
.miniContainerDiv:hover .demoImg img {
  opacity: 0;
}

/* Styles for the "View Project" text */
.hoverContent {
  /* New styles for centering the text */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #fff;
  font-size: 1.5rem;
  font-weight: bold;
  opacity: 0; /* Hide the text initially */
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  font-family: sourcecode;
  transition: opacity 0.3s ease-in-out;
}

/* Show the "View Project" text on hover */
.miniContainerDiv:hover .hoverContent {
  opacity: 1;
}

.square {
  top: 120px;
  right: -120px;
  width: 350px; /* Adjust the width as per your requirements */
  height: 350px; /* Adjust the height as per your requirements */
  z-index: 0; /* Ensure the scribble appears above the image */
}

.stripes {
  top: 1100px;
  left: -20px;
  width: 150px; /* Adjust the width as per your requirements */
  height: 150px; /* Adjust the height as per your requirements */
  z-index: 0; /* Ensure the scribble appears above the image */
}

.scribble {
  top: 870px;
  right: -80px;
  width: 400px; /* Adjust the width as per your requirements */
  height: 395px; /* Adjust the height as per your requirements */
  z-index: 2; /* Ensure the scribble appears above the image */
}

.demoImg {
  align-self: center;
  position: absolute;
  width: 100%; /* Adjust the width as per your requirements */
  height: 100%; /* Adjust the height as per your requirements */
  z-index: 1; /* Ensure the scribble appears above the image */
  border-radius: 24px;
}

img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 5px;
}

.projectTitle {
  display: flex;
  font-weight: 600;
  font-family: "Poppins-Bold";
  color: #0062fd;
  font-size: xx-large;
}

.desc {
  font-size: small;
  font-family: "Poppins";
  color: black;
}

.technologies {
  gap: 0.5rem;
  justify-content: flex-end;
  font-family: "Courier New", Courier, monospace;
  color: black;
}

.small {
  font-weight: 600;
}

/* Contact Form Component Styling */

.contactContainer {
  width: 100%;
  justify-content: center;
  align-items: flex-start;
  gap: 2rem;
}

.contactCard {
  display: grid;
  align-items: center;
  row-gap: 10px;
  padding: 1.5rem;
  width: 100%;
  background: none;
  border-radius: 10px;
  text-align: center;
}

.twitterIcon,
.arrowIcon {
  color: #0062fd;
}

.contactFlex {
  justify-content: center;
  gap: 5px;
  color: F8F5F2;
  font-weight: 600;
  cursor: pointer;
}

.form {
  width: 100%;
  margin: auto;
}

input,
textarea {
  height: 1rem;
  width: 90%;
  padding: 1.5rem 0.5rem;
  border-radius: 10px;
  background: none;
  border: 2px solid;
  margin: 0.5rem 0;
  outline: none;
  color: white;
  font-weight: 600;
}

textarea {
  height: 150px;
}

.formBtn {
  display: block;
  margin: auto;
  width: 90%;
  border: none;
  padding: 1rem 0;
  background: #0062fd;
  color: white;
  cursor: pointer;
  border-radius: 10px;
  font-size: 18px;
  font-weight: 600;
}

.formBtn:hover {
  background: #0099ff;
  color: white;
}

input::placeholder,
textarea::placeholder {
  color: white;
  opacity: 0.5;
}

/* Skill Progress Bar Component */

.progress-bar {
  display: flex;
  align-items: center;
}

.progress {
  position: relative;
  width: 100%;
  height: 0.5rem;
  background-color: #0e111a;
}

.barSpan {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 100%;
  background-color: #0099ff;
  border-radius: 10px;
}

/* Skills Page */

.skills {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-row-gap: 2rem;
  grid-column-gap: 3rem;
}

/* Heading/Title Text Styling */

.sectionTitle {
  padding: 2rem;
  font-size: 2.2rem;
  font-weight: bold;
  color: white;
  display: flex;
  align-content: center;
  justify-content: center;
}

.titleSymbol {
  color: #0062fd;
  font-weight: 600;
}

.titleText {
  position: relative;
  width: max-content;
}

/* Media Query for Mobile Devices */
@media (max-width: 768px) {
  .square {
    display: none;
  }

  .stripes {
    top: 900px;
    left: -10px;
    width: 100px; /* Adjust the width as per your requirements */
    height: 100px; /* Adjust the height as per your requirements */
    z-index: 0;
  }

  /* Hide the "scribble" image container on tablet and mobile screens */
  .scribble {
    display: none;
  }
}

/* Media Query for Tablet Devices */
@media (min-width: 768px) and (max-width: 1324px) {
  .stripes {
    top: 600px;
    left: -10px;
    width: 100px; /* Adjust the width as per your requirements */
    height: 100px; /* Adjust the height as per your requirements */
    z-index: 2;
  }

  /* Hide the "scribble" image container on tablet and mobile screens */
  .scribble {
    display: none;
  }
}

